Refactoring some clases and directories